force-app/main/default/objects/Plan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Día final de ejecución del plan</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>