force-app/main/default/objects/Plan__c/fields/Focus_on__c.field-meta.xml
<CustomField>
    <fullName>Focus_on__c</fullName>
    <description>Espacio para escribir el plan hacia que está enfocado</description>
    <inlineHelpText>¿Hacia qué esta enfocado el plan de entrenamiento?</inlineHelpText>
    <label>Focus on</label>
    <length>255</length>
    <type>Text</type>
</CustomField>