force-app/main/default/objects/Plan__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Día de inicio del plan</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>